added assets and started welcome page

--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;500&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Macondo+Swash+Caps&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Itim&display=swap"
       rel="stylesheet"
     />
     <!-- Responsive -->
@@ -25,7 +29,18 @@
   <body>
     <div class="container">
       <!-- Main -->
-      <section class="hero-into" id="intro"></section>
+      <section class="hero-intro" id="intro">
+        <div class="title">
+          <img src="assets/imgs/logo.png" alt="logo" class="logo" />
+          <h1 class="name">Tijuana</h1>
+          <p class="slogan">The combination of culture and flavor</p>
+        </div>
+        <img
+          src="assets/imgs/welcome.jpg"
+          alt="into image of tacos"
+          class="intro-img"
+        />
+      </section>
     </div>
     <script src="/app.js" type="module"></script>
   </body>
