hero img commit

--- a/index.html
+++ b/index.html
@@ -27,21 +27,19 @@
     <title></title>
   </head>
   <body>
-    <div class="container">
-      <!-- Main -->
-      <section class="hero-intro" id="intro">
-        <div class="title">
-          <img src="assets/imgs/logo.png" alt="logo" class="logo" />
-          <h1 class="name">Tijuana</h1>
-          <p class="slogan">The combination of culture and flavor</p>
+    <!-- Main -->
+    <section class="hero-intro" id="intro">
+      <div class="title">
+        <img src="assets/imgs/logo.png" alt="logo" class="logo" />
+        <h1 class="name">Tijuana</h1>
+        <p class="slogan">The combination of culture and flavor</p>
+      </div>
+      <div class="hero">
+        <div class="bg-img-wrapper">
+          <div class="bg-img"></div>
         </div>
-        <img
-          src="assets/imgs/welcome.jpg"
-          alt="into image of tacos"
-          class="intro-img"
-        />
-      </section>
-    </div>
+      </div>
+    </section>
     <script src="/app.js" type="module"></script>
   </body>
 </html>
