adding home page btn

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
           <div class="bg-img"></div>
         </div>
       </div>
+      <button class="btn">Tap to Enter</button>
     </section>
     <script src="/app.js" type="module"></script>
   </body>
