creating framework for page

--- a/menu.html
+++ b/menu.html
@@ -23,11 +23,11 @@
     <!-- CSS -->
     <link rel="stylesheet" href="css/defaults.css" />
     <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="css/menu.css" />
     <!-- Title -->
     <title></title>
   </head>
   <body>
-    <div class="container">
       <!-- Nav -->
       <header class="header" id="header">
         <button class="nav-toggle" aria-label="toggle navigation">
@@ -36,16 +36,16 @@
         <nav class="nav">
           <ul class="nav__list">
             <li class="nav__item">
-              <a href="#home" class="nav__link">Home</a>
+              <a href="#all" class="nav__link">All</a>
             </li>
             <li class="nav__item">
-              <a href="#services" class="nav__link">My Services</a>
+              <a href="#tacos" class="nav__link">Tacos</a>
             </li>
             <li class="nav__item">
-              <a href="#about" class="nav__link">About Me</a>
+              <a href="#burritos" class="nav__link">Burritos</a>
             </li>
             <li class="nav__item">
-              <a href="#work" class="nav__link">My Projects</a>
+              <a href="#quesadillas" class="nav__link">Quesadillas</a>
             </li>
           </ul>
         </nav>
