creating menu nav and cards

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           <div class="bg-img"></div>
         </div>
       </div>
-      <button class="btn">Tap to Enter</button>
+      <button class="btn"><a href="./menu.html">Tap to Enter</a></button>
     </section>
     <script src="/app.js" type="module"></script>
   </body>
