styling menu cards

--- a/menu.html
+++ b/menu.html
@@ -54,7 +54,6 @@
           <div class="menu-title">
             <img src="assets/imgs/logo.png" alt="logo" class="logo" />
             <h2 class="menu-name">Menu</h2>
-            <p class="menu-slogan">The combination of culture and flavor</p>
           </div>
           <div class="search-container">
             <label for="search">
@@ -71,19 +70,113 @@
               <li data-filter="taco" class="filter-link">Tacos</li>
               <li data-filter="burr" class="filter-link">Burritos</li>
               <li data-filter="ques" class="filter-link">Quesadillas</li>
+              <li data-filter="torta" class="filter-link">Tortas</li>
             </ul>
           </div>
           <!-- Menu Grid -->
            <div class="menu-grid">
+            <!-- Taco Cards -->
             <div class="menu-card" data-item="taco" data-open="taco-1">
               <div class="card-body">
-                <img src="assets/imgs/tacos-asada.jpg" alt="Tacos Carne Asada">
+                <img src="assets/imgs/tacos-asada.jpg" alt="carne asada tacos">
                 <div class="card-popup-box">
                   <div>Tacos</div>
                   <h3>Carne Asada</h3>
                 </div>
               </div>
             </div>
+            <div class="menu-card" data-item="taco" data-open="taco-2">
+              <div class="card-body">
+                <img src="assets/imgs/tacos-pastor.jpg" alt="pastor tacos">
+                <div class="card-popup-box">
+                  <div>Tacos</div>
+                  <h3>Pastor</h3>
+                </div>
+              </div>
+            </div>
+            <!-- Burrito Cards -->
+            <div class="menu-card" data-item="burr" data-open="burr-1">
+              <div class="card-body">
+                <img src="assets/imgs/burrito-barb.jpg" alt="barbacoa burrito">
+                <div class="card-popup-box">
+                  <div>Burritos</div>
+                  <h3>Barbacoa</h3>
+                </div>
+              </div>
+            </div>
+            <div class="menu-card" data-item="burr" data-open="burr-2">
+              <div class="card-body">
+                <img src="assets/imgs/burrito-carnita.jpg" alt="carnita burrito">
+                <div class="card-popup-box">
+                  <div>Burritos</div>
+                  <h3>Carnita</h3>
+                </div>
+              </div>
+            </div>
+            <div class="menu-card" data-item="burr" data-open="burr-3">
+              <div class="card-body">
+                <img src="assets/imgs/burrito-chicken.jpg" alt="chicken burrito">
+                <div class="card-popup-box">
+                  <div>Burritos</div>
+                  <h3>Chicken</h3>
+                </div>
+              </div>
+            </div>
+            <!-- Quesadillas Cards -->
+            <div class="menu-card" data-item="ques" data-open="ques-1">
+              <div class="card-body">
+                <img src="assets/imgs/quesa.jpg" alt="chicken quesadillas">
+                <div class="card-popup-box">
+                  <div>Quesadillas</div>
+                  <h3>Chicken</h3>
+                </div>
+              </div>
+            </div>
+            <div class="menu-card" data-item="ques" data-open="ques-2">
+              <div class="card-body">
+                <img src="assets/imgs/quesa-vegeta.jpg" alt="vegetarian quesadillas">
+                <div class="card-popup-box">
+                  <div>Quesadillas</div>
+                  <h3>Vegetarian</h3>
+                </div>
+              </div>
+            </div>
+            <!-- Torta Cards -->
+            <div class="menu-card" data-item="torta" data-open="torta-1">
+              <div class="card-body">
+                <img src="assets/imgs/torta-chor.jpg" alt="chorizo torta">
+                <div class="card-popup-box">
+                  <div>Tortas</div>
+                  <h3>Chorizo</h3>
+                </div>
+              </div>
+            </div>
+            <div class="menu-card" data-item="torta" data-open="torta-2">
+              <div class="card-body">
+                <img src="assets/imgs/torta-pork.jpg" alt="pork torta">
+                <div class="card-popup-box">
+                  <div>Tortas</div>
+                  <h3>Pork</h3>
+                </div>
+              </div>
+            </div>
+            <div class="menu-card" data-item="torta" data-open="torta-3">
+              <div class="card-body">
+                <img src="assets/imgs/torta-hNc.jpg" alt="ham and cheese torta">
+                <div class="card-popup-box">
+                  <div>Tortas</div>
+                  <h3>Ham and Cheese</h3>
+                </div>
+              </div>
+            </div>
+
+
+
+
+
+
+
+
            </div>
 
         </section>
