--- a/menu.html
+++ b/menu.html
@@ -169,17 +169,28 @@
                 </div>
               </div>
             </div>
-
-
-
-
-
-
-
-
            </div>
-
         </section>
+
+        <!-- Popup Modals -->
+        <div id="taco-1" class="modal" data-animation="slideInOutTop">
+          <div class="modal-dialog">
+            <header class="modal-header">
+              <h3>Tacos</h3>
+              <i class="fas fa-times" data-close=""></i>
+            </header>
+            <div class="modal-body">
+              <div class="img-wrapper">
+                <img src="assets/imgs/tacos-asada.jpg" alt="carne asada tacos">
+              </div>
+              <div class="text-wrapper">
+                <p><strong>Carne Asada</strong></p>
+                <p>Nuhor lir gurenna. Skorī demalyti tymptir tymis, erinis ia morghulis. Valar morghulis. Sikudi nopazmi! Tubi daor.</p>
+                <p>Nuhor lir gurenna. Skorī demalyti tymptir tymis, erinis ia morghulis. Valar morghulis. Sikudi nopazmi! Tubi daor.</p>
+              </div>
+            </div>
+          </div>
+        </div>
        </main>
 
 
