changing style on cards

--- a/menu.html
+++ b/menu.html
@@ -80,8 +80,15 @@
               <div class="card-body">
                 <img src="assets/imgs/tacos-asada.jpg" alt="carne asada tacos">
                 <div class="card-popup-box">
-                  <div>Tacos</div>
                   <h3>Carne Asada</h3>
+                  <div class="tap">
+                    <div class="tap-flex">
+                      <p>$10</p>
+                      <i class="fa-solid fa-circle"></i>
+                      <p>10 mins</p>
+                    </div>
+                    <p>Details</p>
+                  </div>
                 </div>
               </div>
             </div>
