styling popup box

--- a/menu.html
+++ b/menu.html
@@ -249,7 +249,6 @@
         <div id="taco-1" class="modal" data-animation="slideInOutTop">
           <div class="modal-dialog">
             <header class="modal-header">
-              <h3>Tacos</h3>
               <i class="fas fa-times" data-close=""></i>
             </header>
             <div class="modal-body">
@@ -257,7 +256,7 @@
                 <img src="assets/imgs/tacos-asada.jpg" alt="carne asada tacos">
               </div>
               <div class="text-wrapper">
-                <p><strong>Carne Asada</strong></p>
+                <h3>Carne Asada</h3>
                 <p>Nuhor lir gurenna. Skorī demalyti tymptir tymis, erinis ia morghulis. Valar morghulis. Sikudi nopazmi! Tubi daor.</p>
                 <p>Nuhor lir gurenna. Skorī demalyti tymptir tymis, erinis ia morghulis. Valar morghulis. Sikudi nopazmi! Tubi daor.</p>
               </div>
