--- a/menu.html
+++ b/menu.html
@@ -311,6 +311,6 @@
         </ul>
       </footer> -->
     </div>
-    <script src="/app.js" type="module"></script>
+    <script src="/main.js" type="module"></script>
   </body>
 </html>
