adding modals for all cards

--- a/menu.html
+++ b/menu.html
@@ -263,6 +263,159 @@
             </div>
           </div>
         </div>
+        <div id="taco-2" class="modal" data-animation="slideInOutTop">
+          <div class="modal-dialog">
+            <header class="modal-header">
+              <i class="fas fa-times" data-close=""></i>
+            </header>
+            <div class="modal-body">
+              <div class="img-wrapper">
+                <img src="assets/imgs/tacos-asada.jpg" alt="pastor tacos">
+              </div>
+              <div class="text-wrapper">
+                <h3>Pastor</h3>
+                <p>Nuhor lir gurenna. Skorī demalyti tymptir tymis, erinis ia morghulis. Valar morghulis. Sikudi nopazmi! Tubi daor.</p>
+                <p>Nuhor lir gurenna. Skorī demalyti tymptir tymis, erinis ia morghulis. Valar morghulis. Sikudi nopazmi! Tubi daor.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div id="burr-1" class="modal" data-animation="slideInOutTop">
+          <div class="modal-dialog">
+            <header class="modal-header">
+              <i class="fas fa-times" data-close=""></i>
+            </header>
+            <div class="modal-body">
+              <div class="img-wrapper">
+                <img src="assets/imgs/tacos-asada.jpg" alt="barbacoa burrito">
+              </div>
+              <div class="text-wrapper">
+                <h3>Barbacoa</h3>
+                <p>Nuhor lir gurenna. Skorī demalyti tymptir tymis, erinis ia morghulis. Valar morghulis. Sikudi nopazmi! Tubi daor.</p>
+                <p>Nuhor lir gurenna. Skorī demalyti tymptir tymis, erinis ia morghulis. Valar morghulis. Sikudi nopazmi! Tubi daor.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div id="burr-2" class="modal" data-animation="slideInOutTop">
+          <div class="modal-dialog">
+            <header class="modal-header">
+              <i class="fas fa-times" data-close=""></i>
+            </header>
+            <div class="modal-body">
+              <div class="img-wrapper">
+                <img src="assets/imgs/tacos-asada.jpg" alt="carnita burrito">
+              </div>
+              <div class="text-wrapper">
+                <h3>Carnita</h3>
+                <p>Nuhor lir gurenna. Skorī demalyti tymptir tymis, erinis ia morghulis. Valar morghulis. Sikudi nopazmi! Tubi daor.</p>
+                <p>Nuhor lir gurenna. Skorī demalyti tymptir tymis, erinis ia morghulis. Valar morghulis. Sikudi nopazmi! Tubi daor.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div id="burr-3" class="modal" data-animation="slideInOutTop">
+          <div class="modal-dialog">
+            <header class="modal-header">
+              <i class="fas fa-times" data-close=""></i>
+            </header>
+            <div class="modal-body">
+              <div class="img-wrapper">
+                <img src="assets/imgs/tacos-asada.jpg" alt="chicken burrito">
+              </div>
+              <div class="text-wrapper">
+                <h3>Chicken</h3>
+                <p>Nuhor lir gurenna. Skorī demalyti tymptir tymis, erinis ia morghulis. Valar morghulis. Sikudi nopazmi! Tubi daor.</p>
+                <p>Nuhor lir gurenna. Skorī demalyti tymptir tymis, erinis ia morghulis. Valar morghulis. Sikudi nopazmi! Tubi daor.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div id="ques-1" class="modal" data-animation="slideInOutTop">
+          <div class="modal-dialog">
+            <header class="modal-header">
+              <i class="fas fa-times" data-close=""></i>
+            </header>
+            <div class="modal-body">
+              <div class="img-wrapper">
+                <img src="assets/imgs/quesa.jpg" alt="chicken quesadillas">
+              </div>
+              <div class="text-wrapper">
+                <h3>Chicken</h3>
+                <p>Nuhor lir gurenna. Skorī demalyti tymptir tymis, erinis ia morghulis. Valar morghulis. Sikudi nopazmi! Tubi daor.</p>
+                <p>Nuhor lir gurenna. Skorī demalyti tymptir tymis, erinis ia morghulis. Valar morghulis. Sikudi nopazmi! Tubi daor.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div id="ques-2" class="modal" data-animation="slideInOutTop">
+          <div class="modal-dialog">
+            <header class="modal-header">
+              <i class="fas fa-times" data-close=""></i>
+            </header>
+            <div class="modal-body">
+              <div class="img-wrapper">
+                <img src="assets/imgs/quesa-vegeta.jpg" alt="vegetarian quesadillas">
+              </div>
+              <div class="text-wrapper">
+                <h3>Vegetarian</h3>
+                <p>Nuhor lir gurenna. Skorī demalyti tymptir tymis, erinis ia morghulis. Valar morghulis. Sikudi nopazmi! Tubi daor.</p>
+                <p>Nuhor lir gurenna. Skorī demalyti tymptir tymis, erinis ia morghulis. Valar morghulis. Sikudi nopazmi! Tubi daor.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div id="torta-1" class="modal" data-animation="slideInOutTop">
+          <div class="modal-dialog">
+            <header class="modal-header">
+              <i class="fas fa-times" data-close=""></i>
+            </header>
+            <div class="modal-body">
+              <div class="img-wrapper">
+                <img src="assets/imgs/torta-chor.jpg" alt="chorizo torta">
+              </div>
+              <div class="text-wrapper">
+                <h3>Chorizo</h3>
+                <p>Nuhor lir gurenna. Skorī demalyti tymptir tymis, erinis ia morghulis. Valar morghulis. Sikudi nopazmi! Tubi daor.</p>
+                <p>Nuhor lir gurenna. Skorī demalyti tymptir tymis, erinis ia morghulis. Valar morghulis. Sikudi nopazmi! Tubi daor.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div id="torta-2" class="modal" data-animation="slideInOutTop">
+          <div class="modal-dialog">
+            <header class="modal-header">
+              <i class="fas fa-times" data-close=""></i>
+            </header>
+            <div class="modal-body">
+              <div class="img-wrapper">
+                <img src="assets/imgs/torta-pork.jpg" alt="pork torta">
+              </div>
+              <div class="text-wrapper">
+                <h3>Pork</h3>
+                <p>Nuhor lir gurenna. Skorī demalyti tymptir tymis, erinis ia morghulis. Valar morghulis. Sikudi nopazmi! Tubi daor.</p>
+                <p>Nuhor lir gurenna. Skorī demalyti tymptir tymis, erinis ia morghulis. Valar morghulis. Sikudi nopazmi! Tubi daor.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div id="torta-3" class="modal" data-animation="slideInOutTop">
+          <div class="modal-dialog">
+            <header class="modal-header">
+              <i class="fas fa-times" data-close=""></i>
+            </header>
+            <div class="modal-body">
+              <div class="img-wrapper">
+                <img src="assets/imgs/torta-hNc.jpg" alt="ham and cheese torta">
+              </div>
+              <div class="text-wrapper">
+                <h3>Ham & Cheese</h3>
+                <p>Nuhor lir gurenna. Skorī demalyti tymptir tymis, erinis ia morghulis. Valar morghulis. Sikudi nopazmi! Tubi daor.</p>
+                <p>Nuhor lir gurenna. Skorī demalyti tymptir tymis, erinis ia morghulis. Valar morghulis. Sikudi nopazmi! Tubi daor.</p>
+              </div>
+            </div>
+          </div>
+        </div>
        </main>
 
 
