updated style on modal cards
also added a simple animation to title and footer

--- a/menu.html
+++ b/menu.html
@@ -57,7 +57,7 @@
         <section class="menu">
           <div class="menu-title">
             <img src="assets/imgs/logo.png" alt="logo" class="logo" />
-            <h2 class="menu-name">Menu</h2>
+            <h2 class="menu-name hidden">Menu</h2>
           </div>
           <div class="search-container">
             <label for="search">
@@ -288,10 +288,15 @@
                     Nuhor lir gurenna. Skorī demalyti tymptir tymis, erinis ia
                     morghulis. Valar morghulis. Sikudi nopazmi! Tubi daor.
                   </p>
+                  <h4>Ingredients</h4>
                   <p>
-                    Nuhor lir gurenna. Skorī demalyti tymptir tymis, erinis ia
-                    morghulis. Valar morghulis. Sikudi nopazmi! Tubi daor.
+                    Carne asada, corn tortillas, guacamole, chopped white onion,
+                    chopped fresh cilantro,salsa (red, greenm, or pico de
+                    gallo), crumbled queso fresco, sour cream, sliced radishes,
+                    & sliced jalapenos.
                   </p>
+                  <h4>Allergens</h4>
+                  <p>WHEAT/GLUTON (Flour Tortilla)</p>
                 </div>
               </div>
             </div>
@@ -311,10 +316,15 @@
                     Nuhor lir gurenna. Skorī demalyti tymptir tymis, erinis ia
                     morghulis. Valar morghulis. Sikudi nopazmi! Tubi daor.
                   </p>
+                  <h4>Ingredients</h4>
                   <p>
-                    Nuhor lir gurenna. Skorī demalyti tymptir tymis, erinis ia
-                    morghulis. Valar morghulis. Sikudi nopazmi! Tubi daor.
+                    Carne asada, corn tortillas, guacamole, chopped white onion,
+                    chopped fresh cilantro,salsa (red, greenm, or pico de
+                    gallo), crumbled queso fresco, sour cream, sliced radishes,
+                    & sliced jalapenos.
                   </p>
+                  <h4>Allergens</h4>
+                  <p>WHEAT/GLUTON (Flour Tortilla)</p>
                 </div>
               </div>
             </div>
@@ -337,10 +347,15 @@
                     Nuhor lir gurenna. Skorī demalyti tymptir tymis, erinis ia
                     morghulis. Valar morghulis. Sikudi nopazmi! Tubi daor.
                   </p>
+                  <h4>Ingredients</h4>
                   <p>
-                    Nuhor lir gurenna. Skorī demalyti tymptir tymis, erinis ia
-                    morghulis. Valar morghulis. Sikudi nopazmi! Tubi daor.
+                    Carne asada, corn tortillas, guacamole, chopped white onion,
+                    chopped fresh cilantro,salsa (red, greenm, or pico de
+                    gallo), crumbled queso fresco, sour cream, sliced radishes,
+                    & sliced jalapenos.
                   </p>
+                  <h4>Allergens</h4>
+                  <p>WHEAT/GLUTON (Flour Tortilla)</p>
                 </div>
               </div>
             </div>
@@ -363,10 +378,15 @@
                     Nuhor lir gurenna. Skorī demalyti tymptir tymis, erinis ia
                     morghulis. Valar morghulis. Sikudi nopazmi! Tubi daor.
                   </p>
+                  <h4>Ingredients</h4>
                   <p>
-                    Nuhor lir gurenna. Skorī demalyti tymptir tymis, erinis ia
-                    morghulis. Valar morghulis. Sikudi nopazmi! Tubi daor.
+                    Carne asada, corn tortillas, guacamole, chopped white onion,
+                    chopped fresh cilantro,salsa (red, greenm, or pico de
+                    gallo), crumbled queso fresco, sour cream, sliced radishes,
+                    & sliced jalapenos.
                   </p>
+                  <h4>Allergens</h4>
+                  <p>WHEAT/GLUTON (Flour Tortilla)</p>
                 </div>
               </div>
             </div>
@@ -389,10 +409,15 @@
                     Nuhor lir gurenna. Skorī demalyti tymptir tymis, erinis ia
                     morghulis. Valar morghulis. Sikudi nopazmi! Tubi daor.
                   </p>
+                  <h4>Ingredients</h4>
                   <p>
-                    Nuhor lir gurenna. Skorī demalyti tymptir tymis, erinis ia
-                    morghulis. Valar morghulis. Sikudi nopazmi! Tubi daor.
+                    Carne asada, corn tortillas, guacamole, chopped white onion,
+                    chopped fresh cilantro,salsa (red, greenm, or pico de
+                    gallo), crumbled queso fresco, sour cream, sliced radishes,
+                    & sliced jalapenos.
                   </p>
+                  <h4>Allergens</h4>
+                  <p>WHEAT/GLUTON (Flour Tortilla)</p>
                 </div>
               </div>
             </div>
@@ -412,10 +437,15 @@
                     Nuhor lir gurenna. Skorī demalyti tymptir tymis, erinis ia
                     morghulis. Valar morghulis. Sikudi nopazmi! Tubi daor.
                   </p>
+                  <h4>Ingredients</h4>
                   <p>
-                    Nuhor lir gurenna. Skorī demalyti tymptir tymis, erinis ia
-                    morghulis. Valar morghulis. Sikudi nopazmi! Tubi daor.
+                    Carne asada, corn tortillas, guacamole, chopped white onion,
+                    chopped fresh cilantro,salsa (red, greenm, or pico de
+                    gallo), crumbled queso fresco, sour cream, sliced radishes,
+                    & sliced jalapenos.
                   </p>
+                  <h4>Allergens</h4>
+                  <p>WHEAT/GLUTON (Flour Tortilla)</p>
                 </div>
               </div>
             </div>
@@ -438,10 +468,15 @@
                     Nuhor lir gurenna. Skorī demalyti tymptir tymis, erinis ia
                     morghulis. Valar morghulis. Sikudi nopazmi! Tubi daor.
                   </p>
+                  <h4>Ingredients</h4>
                   <p>
-                    Nuhor lir gurenna. Skorī demalyti tymptir tymis, erinis ia
-                    morghulis. Valar morghulis. Sikudi nopazmi! Tubi daor.
+                    Carne asada, corn tortillas, guacamole, chopped white onion,
+                    chopped fresh cilantro,salsa (red, greenm, or pico de
+                    gallo), crumbled queso fresco, sour cream, sliced radishes,
+                    & sliced jalapenos.
                   </p>
+                  <h4>Allergens</h4>
+                  <p>WHEAT/GLUTON (Flour Tortilla)</p>
                 </div>
               </div>
             </div>
@@ -484,10 +519,15 @@
                     Nuhor lir gurenna. Skorī demalyti tymptir tymis, erinis ia
                     morghulis. Valar morghulis. Sikudi nopazmi! Tubi daor.
                   </p>
+                  <h4>Ingredients</h4>
                   <p>
-                    Nuhor lir gurenna. Skorī demalyti tymptir tymis, erinis ia
-                    morghulis. Valar morghulis. Sikudi nopazmi! Tubi daor.
+                    Carne asada, corn tortillas, guacamole, chopped white onion,
+                    chopped fresh cilantro,salsa (red, greenm, or pico de
+                    gallo), crumbled queso fresco, sour cream, sliced radishes,
+                    & sliced jalapenos.
                   </p>
+                  <h4>Allergens</h4>
+                  <p>WHEAT/GLUTON (Flour Tortilla)</p>
                 </div>
               </div>
             </div>
@@ -510,10 +550,15 @@
                     Nuhor lir gurenna. Skorī demalyti tymptir tymis, erinis ia
                     morghulis. Valar morghulis. Sikudi nopazmi! Tubi daor.
                   </p>
+                  <h4>Ingredients</h4>
                   <p>
-                    Nuhor lir gurenna. Skorī demalyti tymptir tymis, erinis ia
-                    morghulis. Valar morghulis. Sikudi nopazmi! Tubi daor.
+                    Carne asada, corn tortillas, guacamole, chopped white onion,
+                    chopped fresh cilantro,salsa (red, greenm, or pico de
+                    gallo), crumbled queso fresco, sour cream, sliced radishes,
+                    & sliced jalapenos.
                   </p>
+                  <h4>Allergens</h4>
+                  <p>WHEAT/GLUTON (Flour Tortilla)</p>
                 </div>
               </div>
             </div>
@@ -521,7 +566,7 @@
         </section>
 
         <!-- Footer -->
-        <footer class="footer">
+        <footer class="footer hidden">
           <a href="mailto:zephyrkensei@gmail.com" class="footer__link"
             >zephyrkensei@gmail.com</a
           >
