--- a/menu.html
+++ b/menu.html
@@ -337,7 +337,7 @@
               <div class="modal-body">
                 <div class="img-wrapper">
                   <img
-                    src="assets/imgs/burrito-barb.jpg.jpg"
+                    src="assets/imgs/burrito-barb.jpg"
                     alt="barbacoa burrito"
                   />
                 </div>
@@ -368,7 +368,7 @@
               <div class="modal-body">
                 <div class="img-wrapper">
                   <img
-                    src="assets/imgs/burrito-carnita.jpg.jpg"
+                    src="assets/imgs/burrito-carnita.jpg"
                     alt="carnita burrito"
                   />
                 </div>
@@ -399,7 +399,7 @@
               <div class="modal-body">
                 <div class="img-wrapper">
                   <img
-                    src="assets/imgs/burrito-chicken.jpg.jpg"
+                    src="assets/imgs/burrito-chicken.jpg"
                     alt="chicken burrito"
                   />
                 </div>
