adding full search term

--- a/menu.html
+++ b/menu.html
@@ -72,16 +72,16 @@
             </label>
             <ul class="menu-filter-nav">
               <li data-filter="all" class="filter-link active">All</li>
-              <li data-filter="taco" class="filter-link">Tacos</li>
-              <li data-filter="burr" class="filter-link">Burritos</li>
-              <li data-filter="ques" class="filter-link">Quesadillas</li>
-              <li data-filter="torta" class="filter-link">Tortas</li>
+              <li data-filter="tacos" class="filter-link">Tacos</li>
+              <li data-filter="burritos" class="filter-link">Burritos</li>
+              <li data-filter="quesadillas" class="filter-link">Quesadillas</li>
+              <li data-filter="tortas" class="filter-link">Tortas</li>
             </ul>
           </div>
           <!-- Menu Grid -->
           <div class="menu-grid">
             <!-- Taco Cards -->
-            <div class="menu-card" data-item="taco" data-open="taco-1">
+            <div class="menu-card" data-item="tacos" data-open="taco-1">
               <div class="card-body">
                 <img
                   src="assets/imgs/tacos-asada.jpg"
@@ -100,7 +100,7 @@
                 </div>
               </div>
             </div>
-            <div class="menu-card" data-item="taco" data-open="taco-2">
+            <div class="menu-card" data-item="tacos" data-open="taco-2">
               <div class="card-body">
                 <img src="assets/imgs/tacos-pastor.jpg" alt="pastor tacos" />
                 <div class="card-popup-box">
@@ -118,7 +118,7 @@
             </div>
 
             <!-- Burrito Cards -->
-            <div class="menu-card" data-item="burr" data-open="burr-1">
+            <div class="menu-card" data-item="burritos" data-open="burr-1">
               <div class="card-body">
                 <img
                   src="assets/imgs/burrito-barb.jpg"
@@ -137,7 +137,7 @@
                 </div>
               </div>
             </div>
-            <div class="menu-card" data-item="burr" data-open="burr-2">
+            <div class="menu-card" data-item="burritos" data-open="burr-2">
               <div class="card-body">
                 <img
                   src="assets/imgs/burrito-carnita.jpg"
@@ -156,7 +156,7 @@
                 </div>
               </div>
             </div>
-            <div class="menu-card" data-item="burr" data-open="burr-3">
+            <div class="menu-card" data-item="burritos" data-open="burr-3">
               <div class="card-body">
                 <img
                   src="assets/imgs/burrito-chicken.jpg"
@@ -177,7 +177,7 @@
             </div>
 
             <!-- Quesadillas Cards -->
-            <div class="menu-card" data-item="ques" data-open="ques-1">
+            <div class="menu-card" data-item="quesadillas" data-open="ques-1">
               <div class="card-body">
                 <img src="assets/imgs/quesa.jpg" alt="chicken quesadillas" />
                 <div class="card-popup-box">
@@ -193,7 +193,7 @@
                 </div>
               </div>
             </div>
-            <div class="menu-card" data-item="ques" data-open="ques-2">
+            <div class="menu-card" data-item="quesadillas" data-open="ques-2">
               <div class="card-body">
                 <img
                   src="assets/imgs/quesa-vegeta.jpg"
@@ -214,7 +214,7 @@
             </div>
 
             <!-- Torta Cards -->
-            <div class="menu-card" data-item="torta" data-open="torta-1">
+            <div class="menu-card" data-item="tortas" data-open="torta-1">
               <div class="card-body">
                 <img src="assets/imgs/torta-chor.jpg" alt="chorizo torta" />
                 <div class="card-popup-box">
@@ -230,7 +230,7 @@
                 </div>
               </div>
             </div>
-            <div class="menu-card" data-item="torta" data-open="torta-2">
+            <div class="menu-card" data-item="tortas" data-open="torta-2">
               <div class="card-body">
                 <img src="assets/imgs/torta-pork.jpg" alt="pork torta" />
                 <div class="card-popup-box">
@@ -246,7 +246,7 @@
                 </div>
               </div>
             </div>
-            <div class="menu-card" data-item="torta" data-open="torta-3">
+            <div class="menu-card" data-item="tortas" data-open="torta-3">
               <div class="card-body">
                 <img
                   src="assets/imgs/torta-hNc.jpg"
