add link to splash pg

--- a/menu.html
+++ b/menu.html
@@ -56,7 +56,9 @@
         <!-- Menu Search & Nav -->
         <section class="menu">
           <div class="menu-title">
-            <img src="assets/imgs/logo.png" alt="logo" class="logo" />
+            <a href="/index.html"
+              ><img src="assets/imgs/logo.png" alt="logo" class="logo"
+            /></a>
             <h2 class="menu-name hidden">Menu</h2>
           </div>
           <div class="search-container">
